SCRUM-70 | fix BR_007 - change the gap and layout of nav-blog-student in homepage from flex to grid - kyba

--- a/src/pages/student/Home/Home.css
+++ b/src/pages/student/Home/Home.css
@@ -83,13 +83,13 @@
 .nav-blog-student {
     width: 85%;
     margin-top: 60px;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3vw;
 }
 .blog-content {
     display: flex;
     justify-content: space-between;
-    width: 600px;
     box-shadow: 3px 3px 10px rgba(0,0,0, 0.1);
     padding: 30px;
     height: 200px;
